sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:7: error: not found: value i
  i = 0
  ^AlgCombSort:8: error: not found: value i
  while (i+ecart < getNombreValeurs()) {
         ^AlgCombSort:9: error: not found: value i
    if (!plusPetit(i,i+ecart)) {
                   ^AlgCombSort:9: error: not found: value i
    if (!plusPetit(i,i+ecart)) {
                     ^AlgCombSort:10: error: not found: value echanger
      echanger(i,i+ecart)
      ^AlgCombSort:10: error: not found: value i
      echanger(i,i+ecart)
               ^AlgCombSort:10: error: not found: value i
      echanger(i,i+ecart)
                 ^AlgCombSort:11: error: not found: value i
      i += 1
      ^